--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
 <body>
 
   <div class="card" id="main">
-    <h1>💘 Willst du mein Valentine sein?</h1>
-    <p>(Du kannst nur eine richtige Antwort wählen 😄)</p>
+    <h1>💘 Do u wanna be my Valentineee beeeebbiiiii 😎🦀🦜🐣🐣🐣👁️👁️</h1>
+    <p>(Die Antwort ist gaaaaaanz einfach bubu 😎😄)</p>
 
     <div class="buttons">
-      <button id="yesBtn">Ja 💖</button>
-      <button id="noBtn">Nein 🙈</button>
+      <button id="yesBtn">YES 😎🐒💘</button>
+      <button id="noBtn">ich bin eine bitch 😠👿🆘</button>
     </div>
   </div>
 
