--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <body>
 
   <div class="card" id="main">
-    <h1>💘 Do u wanna be my Valentineee beeeebbiiiii 😎🦀🦜🐣🐣🐣👁️👁️</h1>
+    <h1>💘 Do u wanna be my Valentineee beeeebbiiiii   😎🦀🦜🐣🐣🐣👁️👁️</h1>
     <p>(Die Antwort ist gaaaaaanz einfach bubu 😎😄)</p>
 
     <div class="buttons">
@@ -111,9 +111,9 @@
 
   <div id="celebrate">
     <div class="celebrate-card">
-      <p class="big">Yaaay! 🎆💖</p>
-      <p class="sub">Ich freu mich so sehr! 💘</p>
-      <p class="sub" style="opacity:.85;margin-top:10px;">(Screenshotpflicht 😄)</p>
+      <p class="big">MUHEHEHEHE BEBBBBBEBEBEBI 😎🦜🐣💘</p>
+      <p class="sub">ICH FREUE MICH AUF BERLIN MIT MEINEM BEBI 💘</p>
+      <p class="sub" style="opacity:.85;margin-top:10px;">(MEINE KLEINE BEBIMAUS 🐱🐶)</p>
     </div>
   </div>
 
@@ -139,12 +139,12 @@
 
       // optional: Nein-Text wird “weicher”
       const texts = [
-        "Nein 🙈",
-        "Bist du sicher? 🥺",
-        "Wirklich wirklich? 😳",
-        "Das bricht mein Herz 💔",
-        "Ok… letzter Versuch? 🥹",
-        "Bitte? 😭💘"
+        "Ich bin eine richtige BITCH",
+        "sag vallah",
+        "trau dich noch einmal nh....",
+        "DU HAST NICHT MEHR ALLE TASSEN IM SCHRANK!",
+        "U GETTING TOUCHED",
+        "💀☠️⚰️🪦⚱️"
       ];
       noBtn.textContent = texts[Math.min(noCount, texts.length - 1)];
     });
