--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
 
   <style>
     :root{
-      --bg1:#ffe3ec;   /* helles pink */
-      --bg2:#fff0f6;   /* helles pink 2 */
+      --bg1:#ffe3ec;   /* start pink */
+      --bg2:#fff0f6;
       --text:#2b2b2b;
-      --card: rgba(255,255,255,0.75);
-      --border: rgba(255, 105, 180, 0.25);
-      --shadow: rgba(255, 20, 147, 0.15);
     }
 
     body{
@@ -24,20 +21,20 @@
       display:grid;
       place-items:center;
       transition: background 0.35s ease, color 0.35s ease;
+      overflow-x:hidden;
     }
 
     .card{
-      background: var(--card);
-      backdrop-filter: blur(8px);
-      border: 1px solid var(--border);
+      background: rgba(255,255,255,0.86); /* IMMER hell -> Schrift bleibt sichtbar */
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 105, 180, 0.25);
       border-radius: 18px;
       padding: 28px 22px;
       width: min(520px, 92vw);
       text-align: center;
-      box-shadow: 0 12px 40px var(--shadow);
-      transition: background 0.35s ease, border-color 0.35s ease, box-shadow 0.35s ease;
+      box-shadow: 0 12px 40px rgba(255, 20, 147, 0.15);
       position: relative;
-      z-index: 5;
+      z-index: 6;
     }
 
     h1 { margin: 0 0 10px; font-size: clamp(26px, 4vw, 38px); }
@@ -79,9 +76,10 @@
       transform-origin:center;
     }
 
+    /* Pfeile-Layer */
     .arrows{
       position:absolute;
-      inset:-28px;
+      inset:-32px;
       pointer-events:none;
       opacity:0;
       transform: scale(0.98);
@@ -90,24 +88,25 @@
     }
     .arrows.show{ opacity:1; transform: scale(1); }
 
-    /* einzelne Pfeile */
     .arrow{
       position:absolute;
-      font-size: 28px;
-      filter: drop-shadow(0 6px 10px rgba(0,0,0,0.25));
+      font-size: 30px;
+      filter: drop-shadow(0 8px 14px rgba(0,0,0,0.25));
+      display:none;
     }
     .arrow span{
       display:inline-block;
-      color: #ff1a1a; /* rot */
+      color: #ff1a1a;
       font-weight: 900;
     }
-    /* Positionen (zeigen auf den Button) */
-    .a1{ left:-10px; top:50%; transform: translateY(-50%) rotate(0deg); }
-    .a2{ right:-10px; top:50%; transform: translateY(-50%) rotate(180deg); }
+
+    /* Positionen, zeigen grob auf den Button */
+    .a1{ left:-12px; top:50%; transform: translateY(-50%) rotate(0deg); }
+    .a2{ right:-12px; top:50%; transform: translateY(-50%) rotate(180deg); }
     .a3{ left:50%; top:-8px; transform: translateX(-50%) rotate(90deg); }
     .a4{ left:50%; bottom:-8px; transform: translateX(-50%) rotate(-90deg); }
-    .a5{ left:10%; top:10%; transform: rotate(35deg); }
-    .a6{ right:10%; top:10%; transform: rotate(145deg); }
+    .a5{ left:8%; top:10%; transform: rotate(35deg); }
+    .a6{ right:8%; top:10%; transform: rotate(145deg); }
 
     #noBtn{
       background:#ffffff;
@@ -116,39 +115,7 @@
       font-size:16px;
     }
 
-    /* Konfetti Overlay */
-    #celebrate{
-      position:fixed;
-      inset:0;
-      display:none;
-      place-items:center;
-      background: radial-gradient(circle at top, rgba(255,255,255,0.65), rgba(255, 192, 203, 0.5));
-      z-index:50;
-      overflow:hidden;
-    }
-    .celebrate-card{
-      background: rgba(255,255,255,0.85);
-      border-radius:22px;
-      padding:26px 22px;
-      text-align:center;
-      border:1px solid rgba(255,105,180,0.25);
-      box-shadow: 0 18px 60px rgba(255, 20, 147, 0.2);
-      width:min(560px, 92vw);
-    }
-    .big { font-size: clamp(34px, 5vw, 56px); margin: 0 0 8px; }
-    .sub { font-size: 18px; margin: 0; }
-
-    .confetti{
-      position:absolute;
-      width:10px; height:14px;
-      opacity:0.9;
-      top:-20px;
-      animation: fall linear forwards;
-      border-radius:3px;
-    }
-    @keyframes fall{ to { transform: translateY(110vh) rotate(720deg); } }
-
-    /* ============== GEWITTER OVERLAY ============== */
+    /* ==================== GEWITTER OVERLAY ==================== */
     #storm{
       position:fixed;
       inset:0;
@@ -156,16 +123,15 @@
       display:none;
       z-index: 20;
       overflow:hidden;
-      background: radial-gradient(circle at top, rgba(30,0,40,0.35), rgba(0,0,0,0.65));
+      background: radial-gradient(circle at top, rgba(40,0,60,0.25), rgba(0,0,0,0.55));
     }
     #storm.show{ display:block; }
 
-    /* Regenlinien */
     .rainDrop{
       position:absolute;
-      top:-30px;
+      top:-40px;
       width:2px;
-      height:28px;
+      height:30px;
       background: rgba(180, 220, 255, 0.55);
       transform: skewX(-20deg);
       animation: rain linear infinite;
@@ -174,19 +140,91 @@
       to { transform: translateY(115vh) skewX(-20deg); }
     }
 
-    /* Blitz: ein großer Flash */
     #lightning{
       position:absolute;
       inset:0;
       background: rgba(255,255,255,0.0);
-      animation: lightning 4.2s infinite;
+      animation: lightning 4.0s infinite;
     }
     @keyframes lightning{
       0%, 86%, 100% { background: rgba(255,255,255,0.0); }
-      87% { background: rgba(255,255,255,0.35); }
+      87% { background: rgba(255,255,255,0.33); }
       88% { background: rgba(255,255,255,0.0); }
-      90% { background: rgba(255,255,255,0.25); }
+      90% { background: rgba(255,255,255,0.22); }
       91% { background: rgba(255,255,255,0.0); }
+    }
+
+    /* ==================== CELEBRATE OVERLAY ==================== */
+    #celebrate{
+      position:fixed;
+      inset:0;
+      display:none;
+      place-items:center;
+      z-index:50;
+      overflow:hidden;
+      background: radial-gradient(circle at top, rgba(255,255,255,0.55), rgba(255, 192, 203, 0.35));
+    }
+
+    /* Canvas Feuerwerk hinter allem */
+    #fireworks{
+      position:absolute;
+      inset:0;
+      width:100%;
+      height:100%;
+      z-index: 1;
+    }
+
+    /* Vögel vor Feuerwerk, hinter Karte */
+    #birds{
+      position:absolute;
+      inset:0;
+      z-index: 2;
+      pointer-events:none;
+    }
+
+    .celebrate-card{
+      background: rgba(255,255,255,0.88);
+      border-radius:22px;
+      padding:26px 22px;
+      text-align:center;
+      border:1px solid rgba(255,105,180,0.25);
+      box-shadow: 0 18px 60px rgba(255, 20, 147, 0.2);
+      width:min(560px, 92vw);
+      position: relative;
+      z-index: 3;
+    }
+
+    .big { font-size: clamp(34px, 5vw, 56px); margin: 0 0 8px; }
+    .sub { font-size: 18px; margin: 0; }
+
+    /* Konfetti ist oben drüber */
+    .confetti{
+      position:absolute;
+      width:10px; height:14px;
+      opacity:0.9;
+      top:-20px;
+      animation: fall linear forwards;
+      border-radius:3px;
+      z-index: 4;
+    }
+    @keyframes fall{ to { transform: translateY(110vh) rotate(720deg); } }
+
+    /* Paradiesvögel */
+    .bird{
+      position:absolute;
+      font-size: clamp(30px, 4.4vw, 60px);
+      filter: drop-shadow(0 10px 18px rgba(0,0,0,0.25));
+      will-change: transform;
+      opacity: 0.95;
+    }
+
+    @keyframes flyLR{
+      from { transform: translateX(-25vw) translateY(var(--y)) scale(var(--s)) rotate(var(--r)); }
+      to   { transform: translateX(125vw) translateY(var(--y)) scale(var(--s)) rotate(var(--r)); }
+    }
+    @keyframes flyRL{
+      from { transform: translateX(125vw) translateY(var(--y)) scale(var(--s)) rotate(var(--r)); }
+      to   { transform: translateX(-25vw) translateY(var(--y)) scale(var(--s)) rotate(var(--r)); }
     }
   </style>
 </head>
@@ -200,7 +238,6 @@
       <div class="yesWrap">
         <button id="yesBtn">YES 😎🐒💘</button>
 
-        <!-- Rote Pfeile (werden später eingeblendet) -->
         <div class="arrows" id="arrows">
           <div class="arrow a1"><span>➤</span></div>
           <div class="arrow a2"><span>➤</span></div>
@@ -220,8 +257,11 @@
     <div id="lightning"></div>
   </div>
 
-  <!-- Konfetti -->
+  <!-- Celebrate -->
   <div id="celebrate">
+    <canvas id="fireworks"></canvas>
+    <div id="birds"></div>
+
     <div class="celebrate-card">
       <p class="big">MUHEHEHEHE BEBBBBBEBEBEBI 😎🦜🐣💘</p>
       <p class="sub">ICH FREUE MICH AUF BERLIN MIT MEINEM BEBI 💘</p>
@@ -235,14 +275,13 @@
     const celebrate = document.getElementById('celebrate');
     const arrows = document.getElementById('arrows');
     const storm = document.getElementById('storm');
+    const birdsLayer = document.getElementById('birds');
 
     let noCount = 0;
     let yesScale = 1;
 
-    // ----- Mood/Theme: wird immer dunkler -----
+    // ===================== Mood (nur Hintergrund dunkler) =====================
     function lerp(a, b, t){ return a + (b - a) * t; }
-
-    // Mischung: pink -> dunkel (RGB)
     function mixColor(c1, c2, t){
       const r = Math.round(lerp(c1[0], c2[0], t));
       const g = Math.round(lerp(c1[1], c2[1], t));
@@ -251,80 +290,275 @@
     }
 
     function updateMood(){
-      // t: 0 (pink) bis 1 (sehr düster)
+      // 0 = pink, 1 = düster
       const t = Math.min(1, noCount / 8);
 
-      // Hintergrundfarben: pink -> dunkelviolett/schwarz
       const bg1 = mixColor([255, 227, 236], [60, 10, 80], t);
       const bg2 = mixColor([255, 240, 246], [5, 0, 12], t);
 
-      // Card: weiß -> dunkler
-      const cardAlpha = lerp(0.75, 0.12, t);
-      const borderAlpha = lerp(0.25, 0.55, t);
-      const shadowAlpha = lerp(0.15, 0.45, t);
-
       document.documentElement.style.setProperty('--bg1', bg1);
       document.documentElement.style.setProperty('--bg2', bg2);
-      document.documentElement.style.setProperty('--card', `rgba(20, 10, 30, ${cardAlpha})`);
-      document.documentElement.style.setProperty('--border', `rgba(180, 90, 255, ${borderAlpha})`);
-      document.documentElement.style.setProperty('--shadow', `rgba(0, 0, 0, ${shadowAlpha})`);
 
-      // Text: wird heller wenn düster
-      document.documentElement.style.setProperty('--text', t > 0.35 ? '#f6f0ff' : '#2b2b2b');
+      // Gewitter ab dem 3. Nein
+      if (noCount >= 3) storm.classList.add('show');
+      else storm.classList.remove('show');
 
-      // Gewitter ab einem Punkt
-      if (noCount >= 4) storm.classList.add('show');
-      if (noCount < 4) storm.classList.remove('show');
-
-      // Pfeile ab einem Punkt (und mehr Pfeile bei mehr Neins)
+      // Pfeile ab dem 3. Nein, werden mehr
+      const arrowEls = arrows.querySelectorAll('.arrow');
       if (noCount >= 3) {
         arrows.classList.add('show');
-        // mehr Pfeile schrittweise
-        const arrowEls = arrows.querySelectorAll('.arrow');
         arrowEls.forEach((el, idx) => {
           el.style.display = (idx < Math.min(2 + noCount, arrowEls.length)) ? 'block' : 'none';
         });
       } else {
         arrows.classList.remove('show');
+        arrowEls.forEach(el => el.style.display = 'none');
       }
     }
 
-    // ----- YES wächst -----
-    function updateYesSize() {
+    // ===================== YES wächst =====================
+    function updateYesSize(){
       yesBtn.style.transform = `scale(${yesScale})`;
       yesBtn.style.filter = `saturate(${1 + noCount * 0.15})`;
     }
 
-    // ----- Regen erzeugen (einmalig) -----
+    // ===================== Regen erzeugen (einmalig) =====================
     function buildRain(){
-      // schon gebaut?
       if (storm.dataset.rainBuilt) return;
       storm.dataset.rainBuilt = "1";
 
-      for(let i=0; i<90; i++){
+      for(let i=0; i<95; i++){
         const d = document.createElement('div');
         d.className = 'rainDrop';
         d.style.left = (Math.random() * 100) + 'vw';
-        d.style.opacity = (0.25 + Math.random() * 0.5);
-        const dur = 0.6 + Math.random() * 0.9;
+        d.style.opacity = (0.22 + Math.random() * 0.55);
+        const dur = 0.55 + Math.random() * 0.95;
         d.style.animationDuration = dur + 's';
         d.style.animationDelay = (Math.random() * 1.2) + 's';
         storm.appendChild(d);
       }
     }
 
+    // ===================== Konfetti =====================
+    function launchConfetti(n = 140){
+      for (let i = 0; i < n; i++) {
+        const c = document.createElement('div');
+        c.className = 'confetti';
+
+        const left = Math.random() * 100;
+        const size = 6 + Math.random() * 10;
+        const duration = 2.2 + Math.random() * 2.8;
+
+        c.style.left = left + 'vw';
+        c.style.width = size + 'px';
+        c.style.height = (size * 1.3) + 'px';
+        c.style.animationDuration = duration + 's';
+
+        const colors = ['#ff2f78','#ff7ab6','#ffd1dc','#ffcc00','#7c4dff','#00c2ff','#00ff9d'];
+        c.style.background = colors[Math.floor(Math.random() * colors.length)];
+
+        celebrate.appendChild(c);
+        setTimeout(() => c.remove(), duration * 1000 + 200);
+      }
+    }
+
+    // ===================== Paradiesvögel =====================
+    let birdsRunning = false;
+    let birdTimer = null;
+
+    function spawnBird(){
+      const b = document.createElement('div');
+      b.className = 'bird';
+
+      // Emoji-Paradiesvögel (du kannst hier auch 🦚 nehmen)
+      const options = ['🦜','🦚','🐦','🐤','🐧','🕊️'];
+      b.textContent = options[Math.floor(Math.random() * options.length)];
+
+      const dir = Math.random() < 0.5 ? 'LR' : 'RL';
+      const y = (10 + Math.random() * 70).toFixed(2) + 'vh';
+      const s = (0.55 + Math.random() * 0.9).toFixed(2);
+      const r = ((Math.random()*18) - 9).toFixed(1) + 'deg';
+      const dur = (4.5 + Math.random() * 4.5).toFixed(2) + 's';
+
+      b.style.setProperty('--y', y);
+      b.style.setProperty('--s', s);
+      b.style.setProperty('--r', r);
+
+      b.style.animation = (dir === 'LR' ? `flyLR ${dur} linear forwards` : `flyRL ${dur} linear forwards`);
+      birdsLayer.appendChild(b);
+
+      setTimeout(() => b.remove(), parseFloat(dur) * 1000 + 100);
+    }
+
+    function startBirds(){
+      if (birdsRunning) return;
+      birdsRunning = true;
+
+      // direkt ein paar starten
+      for(let i=0;i<5;i++) setTimeout(spawnBird, i*250);
+
+      birdTimer = setInterval(() => {
+        // ab und zu mehrere
+        spawnBird();
+        if (Math.random() < 0.35) setTimeout(spawnBird, 180);
+        if (Math.random() < 0.18) setTimeout(spawnBird, 360);
+      }, 650);
+    }
+
+    function stopBirds(){
+      birdsRunning = false;
+      if (birdTimer) clearInterval(birdTimer);
+      birdTimer = null;
+      birdsLayer.innerHTML = '';
+    }
+
+    // ===================== Feuerwerk (Canvas) =====================
+    const fwCanvas = document.getElementById('fireworks');
+    const fwCtx = fwCanvas.getContext('2d');
+
+    let fwRunning = false;
+    let rockets = [];
+    let sparks = [];
+    let fwLast = 0;
+    let fwRAF = null;
+
+    function rand(min,max){ return Math.random()*(max-min)+min; }
+
+    function resizeFireworks(){
+      const rect = celebrate.getBoundingClientRect();
+      fwCanvas.width  = Math.floor(rect.width  * devicePixelRatio);
+      fwCanvas.height = Math.floor(rect.height * devicePixelRatio);
+      fwCanvas.style.width  = rect.width + 'px';
+      fwCanvas.style.height = rect.height + 'px';
+      fwCtx.setTransform(devicePixelRatio,0,0,devicePixelRatio,0,0);
+    }
+
+    window.addEventListener('resize', () => {
+      if (fwRunning) resizeFireworks();
+    });
+
+    function launchRocket(){
+      rockets.push({
+        x: rand(0.12, 0.88) * fwCanvas.clientWidth,
+        y: fwCanvas.clientHeight + 12,
+        vx: rand(-0.7, 0.7),
+        vy: rand(-10.2, -13.2),
+        hue: rand(0,360),
+        life: rand(55, 85)
+      });
+    }
+
+    function explode(x,y,hue){
+      const count = Math.floor(rand(70, 125));
+      for(let i=0;i<count;i++){
+        const a = Math.random()*Math.PI*2;
+        const sp = rand(1.5, 6.2);
+        sparks.push({
+          x,y,
+          vx: Math.cos(a)*sp,
+          vy: Math.sin(a)*sp,
+          g: 0.06,
+          drag: 0.985,
+          alpha: 1,
+          decay: rand(0.008, 0.018),
+          hue: hue + rand(-18,18)
+        });
+      }
+    }
+
+    function stepFireworks(ts){
+      if(!fwRunning) return;
+
+      const dt = Math.min(32, (ts - fwLast) || 16);
+      fwLast = ts;
+
+      // dunkle "trail" Fläche für Glow
+      fwCtx.fillStyle = 'rgba(0,0,0,0.22)';
+      fwCtx.fillRect(0,0,fwCanvas.clientWidth, fwCanvas.clientHeight);
+
+      // neue Raketen
+      if (Math.random() < 0.10) launchRocket();
+      if (Math.random() < 0.06) launchRocket();
+
+      // rockets
+      for(let i=rockets.length-1;i>=0;i--){
+        const r = rockets[i];
+        r.x += r.vx * (dt/16);
+        r.y += r.vy * (dt/16);
+        r.vy += 0.09 * (dt/16);
+        r.life -= (dt/16);
+
+        // draw rocket head
+        fwCtx.beginPath();
+        fwCtx.fillStyle = `hsla(${r.hue}, 100%, 70%, 0.95)`;
+        fwCtx.arc(r.x, r.y, 2.3, 0, Math.PI*2);
+        fwCtx.fill();
+
+        // explode when life ends or peak
+        if (r.life <= 0 || r.vy > -1.2){
+          explode(r.x, r.y, r.hue);
+          rockets.splice(i,1);
+        }
+      }
+
+      // sparks
+      for(let i=sparks.length-1;i>=0;i--){
+        const s = sparks[i];
+        s.vx *= s.drag;
+        s.vy *= s.drag;
+        s.vy += s.g * (dt/16);
+        s.x += s.vx * (dt/16);
+        s.y += s.vy * (dt/16);
+        s.alpha -= s.decay * (dt/16);
+
+        fwCtx.beginPath();
+        fwCtx.strokeStyle = `hsla(${s.hue}, 100%, 70%, ${Math.max(0,s.alpha)})`;
+        fwCtx.lineWidth = 2;
+        fwCtx.moveTo(s.x, s.y);
+        fwCtx.lineTo(s.x - s.vx*1.6, s.y - s.vy*1.6);
+        fwCtx.stroke();
+
+        if (s.alpha <= 0) sparks.splice(i,1);
+      }
+
+      fwRAF = requestAnimationFrame(stepFireworks);
+    }
+
+    function startFireworks(){
+      if (fwRunning) return;
+      fwRunning = true;
+
+      resizeFireworks();
+      rockets = [];
+      sparks = [];
+      fwLast = 0;
+
+      // sofort ein paar Schüsse
+      for(let i=0;i<5;i++) setTimeout(launchRocket, i*180);
+
+      fwCtx.clearRect(0,0,fwCanvas.clientWidth, fwCanvas.clientHeight);
+      fwRAF = requestAnimationFrame(stepFireworks);
+    }
+
+    function stopFireworks(){
+      fwRunning = false;
+      if (fwRAF) cancelAnimationFrame(fwRAF);
+      fwRAF = null;
+      fwCtx.clearRect(0,0,fwCanvas.clientWidth, fwCanvas.clientHeight);
+      rockets = [];
+      sparks = [];
+    }
+
+    // ===================== Click Handler =====================
     noBtn.addEventListener('click', () => {
       noCount += 1;
 
-      // YES-Button wächst
       yesScale = Math.min(3.2, 1 + noCount * 0.18);
       updateYesSize();
-
-      // Stimmung dunkler
       updateMood();
 
-      // ab Gewitter: Regen bauen
-      if (noCount >= 2) buildRain();
+      // Gewitter ab 3: Regen bauen
+      if (noCount >= 3) buildRain();
 
       const texts = [
         "Ich bin eine richtige BITCH",
@@ -339,30 +573,12 @@
 
     yesBtn.addEventListener('click', () => {
       celebrate.style.display = 'grid';
-      launchConfetti(180);
+
+      // Party-Stuff
+      launchConfetti(220);
+      startFireworks();
+      startBirds();
     });
-
-    function launchConfetti(n = 120) {
-      for (let i = 0; i < n; i++) {
-        const c = document.createElement('div');
-        c.className = 'confetti';
-
-        const left = Math.random() * 100;
-        const size = 6 + Math.random() * 10;
-        const duration = 2.5 + Math.random() * 2.5;
-
-        c.style.left = left + 'vw';
-        c.style.width = size + 'px';
-        c.style.height = (size * 1.3) + 'px';
-        c.style.animationDuration = duration + 's';
-
-        const colors = ['#ff2f78','#ff7ab6','#ffd1dc','#ffcc00','#7c4dff','#00c2ff'];
-        c.style.background = colors[Math.floor(Math.random() * colors.length)];
-
-        celebrate.appendChild(c);
-        setTimeout(() => c.remove(), duration * 1000 + 200);
-      }
-    }
 
     // Initial
     updateYesSize();
